completed splash main

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <!-- main bg -->
   <div id="splash-main">
-
-    <!-- <img src="./images/constructBg.jpg" alt="splash bg"> -->
+    <img id="splash-red-triangle" src="./images/redTriangle.svg" alt="splash red triangle">
 
     <div id="splash-headline">
       <ul>
@@ -21,16 +20,16 @@
           <img id="splash-star" src="./images/redStarLogo.svg" alt="red star logo">
         </li>
         <li>
-          <h1>J.D. JMES CONSTRUCTION</h1>
+          <h1 id="headline">J.D. JAMES CONSTRUCTION</h1>
         </li>
         <li>
-          <h3>CONCRETE CONTRACTOR</h3>
+          <h3 id="headline-field">CONCRETE CONTRACTOR</h3>
         </li>
         <li>
-          <h2>609.864.3888</h2>
+          <h2 id="headline-phone">609.864.3888</h2>
         </li>
         <li>
-          <button>LET'S GET STARTED</button>
+          <button id="headline-start-btn">LET'S GET STARTED</button>
         </li>
       </ul>
     </div>
