--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./images/redStarLogo.svg">
   <link rel="stylesheet" href="./main.css">
   <title>J.D. James Construction</title>
 </head>
@@ -13,7 +14,6 @@
   <!-- main bg -->
   <div id="splash-main">
     <img id="splash-red-triangle" src="./images/redTriangle.svg" alt="splash red triangle">
-
     <div id="splash-headline">
       <ul>
         <li>
@@ -34,8 +34,14 @@
       </ul>
     </div>
   </div>
+  <div id="banner">
+    <ul>
+      <li>FROM THE BEGINNING TO THE END,</li>
+      <li>WE NEVER COMPROMISE ON QUALITY.</li>
+      <li>- JD JAMES</li>
+    </ul>
+  </div>
 
-  <!-- star -->
 
 
 </body>
