created project section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <!-- main bg -->
   <div id="splash-main">
     <img id="splash-red-triangle" src="./images/redTriangle.svg" alt="splash red triangle">
     <div id="splash-headline">
@@ -41,7 +40,19 @@
       <li>- JD JAMES</li>
     </ul>
   </div>
+  <div id="projects">
+    <div id="project-header">
+      <div id="project-title">PROJECTS</div>
+      <!-- <div id="project-header-line"><span></span></div> -->
+      <div id="project-header-details">
+        <span>SERVING</span><br/>
+        MEDFORD & SOUTH JERSEY <br/>
+        <span>FOR OVER</span>
+        25 YEARS
+      </div>
+    </div>
 
+  </div>
 
 
 </body>
