completed projects view for desktop

--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
         25 YEARS
       </div>
     </div>
-
+    <div id="project-tiles">
+      <div class="project tile1">
+        black and pewter gray paver sidewalk
+      </div>
+      <img class="project" src="./images/sidewalk2.jpg" alt="sidewalk job">
+      <img class="project" src="./images/sidewalk5.jpg" alt="sidewalk job">
+      <img class="project" src="./images/sidewalk3.jpg" alt="sidewalk job">
+      <img class="project" src="./images/sidewalk4.jpg" alt="sidewalk job">
+      <img class="project" src="./images/sidewalk7.jpg" alt="sidewalk job">
+      <img class="project" src="./images/sidewalk6.jpg" alt="sidewalk job">
+      <img class="project" src="./images/sidewalk8.jpg" alt="sidewalk job">
   </div>
 
 
