updating project about section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div id="project-header">
       <div id="project-title">PROJECTS</div>
       <div id="project-header-details">
-        <span>SERVING</span><br/>
-        MEDFORD & SOUTH JERSEY <br/>
+        <span>SERVING</span><br />
+        MEDFORD & SOUTH JERSEY <br />
         <span>FOR OVER</span>
         25 YEARS
       </div>
@@ -61,8 +61,70 @@
       <img class="project" src="./images/sidewalk7.jpg" alt="sidewalk job">
       <img class="project" src="./images/sidewalk6.jpg" alt="sidewalk job">
       <img class="project" src="./images/sidewalk8.jpg" alt="sidewalk job">
+    </div>
   </div>
+  <div id="about">
+    <div class="about-header">
+      <div class="about-title">ABOUT</div>
+      <div class="about-details">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut varius dapibus hendrerit. Sed elit neque, tempus ut
+        vestibulum et, viverra at enim. Aliquam magna justo, feugiat non vestibulum a, pellentesque et neque. Maecenas
+        tincidunt elit ac nisl congue scelerisque eu eget nibh. Nullam ac volutpat mauris, quis sagittis purus. Cras
+        semper elit nisl, ac viverra mauris iaculis nec. Suspendisse et velit eu felis dapibus varius non at enim.
+        Suspendisse interdum faucibus turpis varius pharetra.
+      </div>
+    </div>
 
+    <div id="service">
+      <div id="service-header">SERVICE INCLUDES:</div>
+      <div>
+
+        <ul>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete driveways</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete patios</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete sidewalks</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete floors</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">EP Henry brick pavers</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">EP Henry retaining walls
+          </li>
+        </ul>
+        <ul>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">conrete steps</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete pool decks</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">exotic concrete finishes
+          </li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">hardscaping</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">power washing</li>
+          <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete restoration and
+            repairs</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="about-header">
+      <div class="about-call">
+        CALL US FOR A QUOTE <br />
+        <span>609.864.3888</span> <br />
+        START YOUR NEXT PROJECT TODAY
+      </div>
+      <div class="about-details">
+        <div class="about-details-2nd">
+          WHAT MAKES US DIFFERENT FROM OUT COMPETITORS?
+        </div>
+        <div class="detail-lists">
+          <ul>
+            <li>prompt courteous reliable service</li>
+            <li>reasonable prices</li>
+            <li>no project too big or small</li>
+          </ul>
+          <ul>
+            <li>restoration and repair services</li>
+            <li>personalized service to meet your needs</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
