creating contact section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     </div>
   </div>
   <div id="about">
+    <!-- <img id="owner" src="/images/owner.png" alt=""> -->
     <div class="about-header">
       <div class="about-title">ABOUT</div>
       <div class="about-details">
@@ -77,8 +78,7 @@
 
     <div id="service">
       <div id="service-header">SERVICE INCLUDES:</div>
-      <div>
-
+      <div id="service-lists">
         <ul>
           <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete driveways</li>
           <li><img class="list-bullet" src="/images/redStarLogo.svg" alt="list bullet star">concrete patios</li>
@@ -125,7 +125,34 @@
       </div>
     </div>
   </div>
+  <img id="about-bottom-border" src="./images/roughEdge.png" alt="bg border">
 
+  <div id="contact">
+    <form action="">
+      <div>CONTACT US</div>
+      <div>
+        <label for="name">name</label>
+        <input type="text" id="name" name="name">
+      </div>
+      <div>
+        <label for="name">email</label>
+        <input type="email" id="email" name="email">
+      </div>
+      <div>
+        <label for="name">phone</label>
+        <input type="tel" id="phone" name="phone">
+      </div>
+      <div>
+        <label for="message">message</label>
+          <textarea id="message" name="message"></textarea>
+      </div>
+      <button id="form-btn">SEND</button>
+    </form>
+    <div id="contact-details">
+      <div>609.864.3888</div>
+      <div>LET US HELP YOU GET STARTED TODAY</div>
+    </div>
+  </div>
 </body>
 
 </html>
