--- a/index.html
+++ b/index.html
@@ -129,27 +129,28 @@
 
   <div id="contact">
     <form action="">
-      <div>CONTACT US</div>
-      <div>
+      <div id="form-header">CONTACT US</div>
+      <div class="input-container">
         <label for="name">name</label>
         <input type="text" id="name" name="name">
       </div>
-      <div>
+      <div class="input-container">
         <label for="name">email</label>
         <input type="email" id="email" name="email">
       </div>
-      <div>
+      <div class="input-container">
         <label for="name">phone</label>
         <input type="tel" id="phone" name="phone">
       </div>
-      <div>
+      <div class="input-container">
         <label for="message">message</label>
           <textarea id="message" name="message"></textarea>
       </div>
       <button id="form-btn">SEND</button>
     </form>
     <div id="contact-details">
-      <div>609.864.3888</div>
+      <img id="map-pin" src="/images/mapPin.svg" alt="map pin">
+      <div id="contact-num">609.864.3888</div>
       <div>LET US HELP YOU GET STARTED TODAY</div>
     </div>
   </div>
