updated owner image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div id="about">
-    <!-- <img id="owner" src="/images/owner.png" alt=""> -->
+    <img id="owner" src="/images/owner.png" alt="">
     <div class="about-header">
       <div class="about-title">ABOUT</div>
       <div class="about-details">
