updated media queries

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 <body>
   <div id="splash-main">
     <img id="splash-red-triangle" src="./images/redTriangle.svg" alt="splash red triangle">
+    <div id="social-btns">
+      <img src="/images/houseIcon.svg" alt="home" class="icon gray">
+      <img src="/images/starIcon.svg" alt="bookmark" class="icon gray">
+      <img src="/images/infoI.svg" alt="info" class="icon gray i">
+      <span id="contact-icon">
+        <span>
+          CONTACT
+        </span>
+        <img src="/images/mailIcon.svg" alt="contact" class="icon">
+      </span>
+      <img src="/images/facebookF.svg" alt="face book" class="icon fb-blue">
+      <img src="/images/twitterLogo.svg" alt="twitter" class="icon twitter-blue">
+      <img src="/images/googlePlus.svg" alt="google plus" class="icon google-red">
+    </div>
     <div id="splash-headline">
       <ul>
         <li>
@@ -52,7 +66,12 @@
     </div>
     <div id="project-tiles">
       <div class="project tile1">
-        black and pewter gray paver sidewalk
+        <b>
+          black and pewter gray paver sidewalk
+        </b>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit neque.
+        <br/>
+        <u>veiw</u>
       </div>
       <img class="project" src="./images/sidewalk2.jpg" alt="sidewalk job">
       <img class="project" src="./images/sidewalk5.jpg" alt="sidewalk job">
@@ -144,7 +163,7 @@
       </div>
       <div class="input-container">
         <label for="message">message</label>
-          <textarea id="message" name="message"></textarea>
+        <textarea id="message" name="message"></textarea>
       </div>
       <button id="form-btn">SEND</button>
     </form>
