--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           black and pewter gray paver sidewalk
         </b>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed elit neque.
-        <br/>
+        <br />
         <u>veiw</u>
       </div>
       <img class="project" src="./images/sidewalk2.jpg" alt="sidewalk job">
@@ -173,6 +173,9 @@
       <div>LET US HELP YOU GET STARTED TODAY</div>
     </div>
   </div>
+  <footer>
+    J.D. James Construction, 2014. All Rights Reserved. Custom website by MilesTechnologies.com
+  </footer>
 </body>
 
 </html>
